Hello! Some comments (hope I'm writing in right place): I have just updated from version 2.1.3 to 2.2.0 and I have encountered what might be the same regression. On my machine, it looks like in 2.2.0, VLC is no longer using threaded decoding of the movie efficiently. My test video (1080p, 24frames, 64Mbits/s) needs about 70-80% CPU usage of my Core2@2.83Ghz to play without drops, but now, it stays around 52-55% (little over 1 core) and it drops frames massively.
I've added the logs for both 2.1.5 and 2.2.0 (version 2.1.3 from which I have originally updated looks to be behaving just like 2.1.5).
Extra info: the movie was taken with a Nikon D7000, at 64Mbit/s and it is 4m:10s. It takes 6m:06s CPU time to play without any frame drop on 2.1.5 and it takes 4m:47s to play on 2.2.0, however the frame drop is about half for the entire clip.
VLC reports it as H264-Mpeg4 AVC (part 10) in codec info.
Just looked in the logs I posted before and found a slight difference:
2.1.5:
avcodec debug: trying to use direct rendering
avcodec debug: allowing 3 thread(s) for decoding
avcodec debug: avcodec codec (H264 - MPEG-4 AVC (part 10)) started
avcodec debug: using frame thread mode with 3 threads
2.2.0:
avcodec debug: trying to use direct rendering
avcodec debug: allowing 3 thread(s) for decoding
avcodec warning: threaded frame decoding is not compatible with DXVA2, disabled
avcodec debug: avcodec codec (H264 - MPEG-4 AVC (part 10)) started
avcodec debug: using slice thread mode with 3 threads
Some very important details I forgot to mention: OS is Windows XP SP3 (Lenovo T60, CPU T7600G, Graphics Mobility Radeon 1400).
Could it be the DXVA2 chosen wrongly?
UPDATE: I have just set "Hardware decoding" to "Disabled" into FFmpeg codec from the menu and now behaves just like 2.1.5. It's using 6m:16s CPU time (slightly higher) and does not drop any frames.
Now, not sure if the issue discovered by me is the same as the one original posted, but in my case, looks like the hardware decoding option chosen automatically was the less performing one.
I can confirm, setting Hardware decoding explicitly to Disabled resolves the problem. Setting it from Automatic to DXVA 2.0 explicitly crashes VLC. This issue does not affect every codec, VP8 for example, works just fine.
There also seems to be a slight but real performance regression not related to the "Hardware decoding". I have set my CPU to a fixed speed and when compared I get 5m:56s CPU time on 2.1.5 and 6m:16s on 2.2.0. While it's only 5.6%, it's consistent and negates some of the overclocking that I apply to be able to see the clips without any frame drops.