avcodec: only disable frame threading if DXVA2 is likely to be used

Fixes #14054